# devops-upskill

./: .gitignore  ;  Makefile  create_db.py  env.sh  pyproject.toml  run_app.py  user_data.sh
app/: __init__.py  models.py  test.db
app/main/: views.py
app/templates/: form_results.html  hello_world.html
conf/: upskill  upskill.service
