[tool.poetry]
name = "upskill-python-app"
version = "0.1.0"
description = ""
authors = ["Patryk Lomza <p.lomza@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"
Flask-WTF = "^0.15.1"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
